# llm-taxi

./: README.md  pyproject.toml
src/llm_taxi/: __init__.py  conversation.py  factory.py
src/llm_taxi/clients/: base.py
src/llm_taxi/embeddings/: __init__.py  base.py  google.py  mistral.py  openai.py
src/llm_taxi/llm/: __init__.py  anthropic.py  base.py  dashscope.py  deepinfra.py  deepseek.py  google.py  groq.py  mistral.py  openai.py  openrouter.py  perplexity.py  together.py
src/llm_taxi/llms/: anthropic.py  base.py  google.py  groq.py  mistral.py  openai.py  together.py
