[project]
name = "llm-taxi"
version = "0.0.0"
description = "Add your description here"
authors = [
    { name = "Yevgnen Koh", email = "wherejoystarts@gmail.com" }
]
dependencies = [
    "openai>=1.28.1",
    "pydantic>=2.7.1",
    "httpx[socks]>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_taxi"]
